Updated all buttons on listings and bootstrap to centre all current pagess

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+<%# Accross All Pages   %>
   <body>
     <%= render 'layouts/header' %>
-    
-
+    <div class="container">
 
     <%= yield %>
+    
     <%= render 'layouts/footer' %>
 
   </body>
