--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -24,9 +24,9 @@
         <td><%= listing.city %></td>
         <td><%= listing.state %></td>
         <td><%= listing.best_before %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', listing, class: "btn btn-success" %></td>
+        <td><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-warning" %></td>
+        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Listing', new_listing_path %>
+<%= link_to 'New Listing', new_listing_path, class: "btn btn-primary" %>
