--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -30,5 +30,5 @@
   <%= @listing.best_before %>
 </p>
 
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-primary"  %> |
+<%= link_to 'Back', listings_path, class: "btn btn-warning" %>
