--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -42,6 +42,11 @@
     <%= form.datetime_select :best_before, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
   <div class="actions">
     <%= form.submit class: "btn btn-primary" %>
   </div>
