--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
  <%# All relevant NAVBAR Concerns %>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#">Schnacks</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -14,8 +14,18 @@
         <a class="nav-link" href="/pages/about">About</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="/pages/contact">Contact</a>
+       <a class="nav-link" href="/pages/contact">Contact</a>
       </li>
+    </ul>
+      <ul class="navbar-nav ml-auto rightnav" >
+        <% if user_signed_in? %>
+        <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <li><%= link_to "Sign In", new_user_session_path %></li>
+      <% end %>
+       
     </ul>
   </div>
 </nav>
