--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,15 @@
 
 <%# Accross All Pages   %>
   <body>
-    <%= render 'layouts/header' %>
+  <%= render 'layouts/header' %>
     <div class="container">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
 
     <%= yield %>
     
     <%= render 'layouts/footer' %>
+    </div>
 
   </body>
 </html>
