--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,39 +1,25 @@
 <p id="notice"><%= notice %></p>
+<h1> Schnacks </h1>
 
-<h1>Listings</h1>
-
-<table>
-  <thead>
-    <tr>
-      <%# <th>Image</th> %>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Best before</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <%# <td><%= image_tag.listing.image %></td> %>
-        <td><%= listing.name %></td>
-        <td><%= listing.description %></td>
-        <td><%= listing.price %></td>
-        <td><%= listing.city %></td>
-        <td><%= listing.state %></td>
-        <td><%= listing.best_before %></td>
-        <td><%= link_to 'Show', listing, class: "btn btn-success" %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<div class="row">
+  <% @listings.each do |listing| %>
+    <div class="col-md-5">
+      <div class="thumbnail">
+        <%= image_tag(listing.image, width: 280, height: 200) if listing.image.attached? %><br>
+        <div class="caption">
+          <h2><%= listing.name %><br></h2>
+          <%= listing.description %><br>
+          <%= number_to_currency(listing.price) %><br>
+          <%= listing.city %><br>
+          <%= listing.state %><br>
+          <%= listing.best_before %><br>
+          <%= link_to 'Show', listing, class: "btn btn-success" %>
+          <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-warning" %>
+          <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <%= link_to 'New Listing', new_listing_path, class: "btn btn-primary" %>
