--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,6 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<%= image_tag(@listing.image, width: 200) if @listing.image.attached? %>
+<div class="row">
+  <div class="col-md-6">
+    <div class="thumbnail">
+      <%= image_tag(@listing.image, width: 450, height: 300) if @listing.image.attached? %>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <h2><%= @listing.name %></h2>
+  
+    
+
 
 <p>
   <strong>Name:</strong>
@@ -14,7 +24,7 @@
 
 <p>
   <strong>Price:</strong>
-  <%= @listing.price %>
+  <%= number_to_currency(@listing.price) %>
 </p>
 
 <p>
@@ -31,6 +41,7 @@
   <strong>Best before:</strong>
   <%= @listing.best_before %>
 </p>
+
 
 <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-primary"  %>
 <%= link_to 'Back', listings_path, class: "btn btn-warning" %>
