--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@
   }
   
   .navbar {
-    background-color: #5D5C61;
+    background-color: #d6d6d6;
   }
   
   .navbar-brand {
@@ -36,7 +36,7 @@
     font-family: guardian-egyptt, georgia, serif;
     font-weight: 400;
     color: #000000;
-    font-size: 28px;
+    font-size: 18px;
 }
 
 .centre {
