--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,14 +15,23 @@
  */
  @import "bootstrap";
 
+ .jumbotron {
+  background-image: url('Schnacksb.JPG');
+  height: 250px;
+  width: 100%;
+  background-repeat:no-repeat;  //changed to no-repeat
+  background-position:center;
+  background-size: 100% 100%;
+}
+
  body {
-    background-color: #ffffff;
+    background-color: #d6d6d6;
     color: #333333;
     font-family: Arial, Helvetica, sans-serif;
   }
   
   .navbar {
-    background-color: #d6d6d6;
+    background-color: #0b5274;
   }
   
   .navbar-brand {
@@ -33,7 +42,7 @@
     }
 
 .rightnav {
-    font-family: guardian-egyptt, georgia, serif;
+    font-family: georgia, serif;
     font-weight: 400;
     color: #000000;
     font-size: 18px;
@@ -65,4 +74,13 @@
   
   .col-md-5 {
       font-size: 18px;
+  }
+
+  // SHOW.HTML.ERB PADDING FOR LISTINGS
+  .thumbnail {
+    padding-top: 80px;
+  }
+
+  .col-md-3 {
+    padding-top: 50px;
   }
