--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,17 @@
 @import "bootstrap";
 
+.jumbotron {
+  background-image: url('Schnacksb.JPG');
+  height: 280px;
+  width: 100%;
+  background-repeat:no-repeat;  //changed to no-repeat
+  background-position:center;
+  background-size: 100% 100%;
+  
+}
+
 body {
-  background-color: #F5F5F1;
+  background-color: #7c7c7c;
   color: #333333;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -43,3 +53,5 @@ body {
       font-size: 18px;
     }
   }
+
+ 
