--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,9 +19,10 @@
     </ul>
 
 <%#User sign in sign out navbar right features %>
-      <ul class="navbar-nav ml-auto rightnav" >
-      <li class="nav-item">
+      <ul class="navbar-nav ml-auto rightnav px-2" >
+      <li class="nav-item px-2">
         <% if user_signed_in? %>
+        <%= link_to "Your Schnacks", seller_path %>
         <%= link_to "Edit Profile", edit_user_registration_path %>
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
       <% else %>
