--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -8,7 +8,7 @@
         <%= link_to image_tag(listing.image, width: 280, height: 200), listing if listing.image.attached? %><br>
         <div class="caption">
           <h3><%= listing.name %><br></h3>
-          <h4><%= "Sold by: #{listing.user_id}" %></h4>
+          <h4><%= "Sold by: #{listing.user.name}" %></h4>
           <%= listing.description %><br>
           <%= number_to_currency(listing.price) %><br>
           <%= listing.city %><br>
