--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -1,3 +1,6 @@
+<div class="center">
+  <h2> Your Schnack Listings! </h2>
+</div>
 <table class="table table-bordereed table-light">
   <thead class="thead-dark">
   <tr>
