--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -42,5 +42,7 @@
   <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-primary" %>
 <% end %>
 
+<%= link_to 'Buy Schnack', new_listing_order_path(@listing), class: "btn btn-primary" %>
 <%= link_to 'Back', listings_path, class: "btn btn-warning" %>
+
 
