--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,71 @@
-<h1>Schnacks is an online Marketplace to sell your inner chef<h1>
+
+<div class="bg-light">
+  <div class="container py-5">
+    <div class="row h-100 align-items-center py-5">
+      <div class="col-lg-6">
+        <h1 class="display-4">About Schnacks</h1>
+        <p class="lead text-muted mb-0">Schnacks was created by you, for you to sell your inner chef and join your local community in sharing schnacks!</p>
+        </p>
+      </div>
+      <div class="col-lg-6 d-none d-lg-block"><img src="https://schnacksmarketplace.s3-ap-southeast-2.amazonaws.com/about+1.jpg" alt="" class="img-fluid"></div>
+    </div>
+  </div>
+</div>
+
+<div class="bg-white py-5">
+  <div class="container py-5">
+    <div class="row align-items-center mb-5">
+      <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
+        <h2 class="font-weight-light">Food Waste in Australia?</h2>
+        <p class="font-italic text-muted mb-4">The Government estimates food waste costs the Australian economy $20 billion each year. Over 5 million tonnes of food ends up as landfill, enough to fill 9,000 Olympic sized swimming pools. One in five shopping bags end up in the bin = $3,800 worth of groceries per household each year.</p><a href="https://www.ozharvest.org/what-we-do/environment-facts/#:~:text=In%20Australia%3A,groceries%20per%20household%20each%20year." class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
+      </div>
+      <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="https://schnacksmarketplace.s3-ap-southeast-2.amazonaws.com/about2.png" alt="" class="img-fluid mb-4 mb-lg-0"></div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col-lg-5 px-5 mx-auto"><img src="https://schnacksmarketplace.s3-ap-southeast-2.amazonaws.com/about3.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
+      <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
+        <h2 class="font-weight-light">Share the Schnacks</h2>
+        <p class="font-italic text-muted mb-4">Sharing schnacks is great for everyone, so grab an apron, get in the kitchen and market your inner chef to your local community!</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="bg-light py-5">
+  <div class="container py-5">
+    <div class="row mb-4">
+      <div class="col-lg-5">
+        <h2 class="display-4 font-weight-light text-center">Shcnack Team</h2>
+      </div>
+    </div>
+
+    <div class="row text-center">
+  
+
+      <!-- Team item-->
+      <div class="col-xl-3 col-sm-6 mb-5">
+        <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://schnacksmarketplace.s3-ap-southeast-2.amazonaws.com/about4.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+          <h5 class="mb-0">Daniel Fernandez</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+          <ul class="social mb-0 list-inline mt-3">
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- End-->
+
+ 
+
+
+    </div>
+  </div>
+</div>
+
+
+<footer class="bg-light pb-5">
+  <div class="container text-center">
+    <p class="font-italic text-muted mb-0">&copy; Copyrights Daniel Fernandez 2020 All rights reserved.</p>
+  </div>
+</footer>
