--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,13 @@
-<p>Copyright Daniel Fernandez - 2020 </p>
+<body class="d-flex flex-column">
+  <div id="page-content">
+    <div class="container text-center">
+      <div class="row justify-content-center">
+      </div>
+    </div>
+  </div>
+  <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small> © Copyright Daniel Fernandez - 2020 -</small>
+    </div>
+  </footer>
+</body>
